[gd_scene load_steps=14 format=2]

[ext_resource path="res://character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/character/player.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/character/shadow.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/character/hand.png" type="Texture" id=5]
[ext_resource path="res://character/PlayerFSM.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float flash_modifier = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 6 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[node name="Player" groups=[
"players",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
move_speed_units = 6

[node name="StateMachine" parent="." index="0"]
script = ExtResource( 6 )

[node name="Body" parent="." index="1"]
material = SubResource( 4 )

[node name="Shadow" type="Sprite" parent="Body" index="0"]
texture = ExtResource( 4 )

[node name="CharacterSprite" type="Sprite" parent="Body" index="1"]
use_parent_material = true
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 1024
immunity_duration = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="HandPivot" type="Position2D" parent="." index="4"]
position = Vector2( 0, -8 )

[node name="Hand" type="Sprite" parent="HandPivot" index="0"]
position = Vector2( 8, 0 )
texture = ExtResource( 5 )

[node name="AttackBuffer" type="Timer" parent="Timers" index="0"]
wait_time = 0.2
one_shot = true

[node name="AttackTween" type="Tween" parent="Tweens" index="0"]

[node name="JumpTween" type="Tween" parent="Tweens" index="1"]

[node name="StateLabel" type="Label" parent="." index="7"]
margin_left = -32.0
margin_top = -37.0
margin_right = 32.0
margin_bottom = -5.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = SubResource( 3 )
text = "State"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupArea" type="Area2D" parent="." index="10"]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea" index="0"]
shape = SubResource( 6 )
[connection signal="roll_finished" from="." to="StateMachine" method="_on_Player_roll_finished"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
